# desktop-app-test-rcl

./: .gitignore  README.md  Rocket.toml  app_config.env  local_server.env  package-lock.json  package.json
.github/workflows/: buildMaster.yml  linux-build-steps.yml  macos-build-steps.yml  windows-build-steps.yml
branding/: README.md  favicon.bat  favicon.sh  macicon.bat  macicon.sh  winicon.bat  winicon.sh
branding/building_blocks/: README.md
branding/source/: README.md
buildResources/electron/: electronDevStartup.js  electronStartup.js  preload.js  puppeteer.config.js
globalBuildResources/: client_config.json  i18nPatch.json  icon.icns  theme.json
globalBuildResources/product_resources/: README.md
linux/buildResources/: README.txt  appLauncher.bsh  appLauncherElectron.sh  control  find_free_port.sh  launcher.sh  preinst
linux/install/: getElectronRelease.bsh  makeAllInstallsElectronite.bsh  makeInstallElectronite.bsh
linux/scripts/: app_setup.bsh  build.js  build_clients.bsh  build_server.bsh  bundle_tgz.bsh  bundle_viewer.bsh  clean.bsh  run.bsh  sync.bsh  viewer.bsh
local_server/: Cargo.toml
macos/buildResources/: README.txt  appLauncher.sh  appLauncher.zsh  appLauncherElectron.sh  find_free_port.sh  post_install_script.sh  preinstall
macos/install/: getElectronRelease.sh  getRelease.sh  makeAllInstalls.sh  makeAllInstallsElectronite.sh  makeInstall.sh  makeInstallElectronite.sh  makeInstallFromBuild.sh
macos/scripts/: app_setup.zsh  build.js  build_clients.zsh  build_server.zsh  bundle_viewer.zsh  bundle_zip.zsh  clean.zsh  run.zsh  sync.zsh  (+1 more)
(+23 files in other folders)
